--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.cyecize</groupId>
-            <artifactId>ioc-2.0</artifactId>
-            <version>2.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/ioc-2.0.jar</systemPath>
+            <groupId>org.ioc</groupId>
+            <artifactId>IOC-Container</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.synchronoss.cloud</groupId>
